# ChangeLog for kde-base/kdeaccessibility-colorschemes
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/kde-base/kdeaccessibility-colorschemes/Attic/ChangeLog,v 1.46 2010/01/19 01:37:47 jer Exp $

  19 Jan 2010; Jeroen Roovers <jer@gentoo.org>
  kdeaccessibility-colorschemes-4.3.3.ebuild:
  Stable for HPPA too.

  10 Dec 2009; Tomáš Chvátal <scarabeus@gentoo.org>
  -kdeaccessibility-colorschemes-4.3.1.ebuild:
  Drop KDE SC-4.3.1.

  10 Dec 2009; Christian Faulhammer <fauli@gentoo.org>
  kdeaccessibility-colorschemes-4.3.3.ebuild:
  x86 stable, bug 292455

*kdeaccessibility-colorschemes-4.3.4 (01 Dec 2009)

  01 Dec 2009; Alex Alexander <wired@gentoo.org>
  +kdeaccessibility-colorschemes-4.3.4.ebuild:
  Version bump

  30 Nov 2009; Joseph Jezak <josejx@gentoo.org>
  kdeaccessibility-colorschemes-4.3.3.ebuild:
  Marked ppc/ppc64 stable for bug #292455.

  29 Nov 2009; Raúl Porcel <armin76@gentoo.org>
  kdeaccessibility-colorschemes-4.3.3.ebuild:
  Add ~sparc

  29 Nov 2009; Samuli Suominen <ssuominen@gentoo.org>
  kdeaccessibility-colorschemes-4.3.3.ebuild:
  amd64 stable wrt #292455

  08 Nov 2009; Alexey Shvetsov <alexxy@gentoo.org>
  -kdeaccessibility-colorschemes-4.3.2.ebuild:
  Drop KDE 4.3.2

  08 Nov 2009; Alexey Shvetsov <alexxy@gentoo.org>
  -kdeaccessibility-colorschemes-4.2.4.ebuild:
  Drop KDE 4.2.4

*kdeaccessibility-colorschemes-4.3.3 (02 Nov 2009)

  02 Nov 2009; Alex Alexander <wired@gentoo.org>
  +kdeaccessibility-colorschemes-4.3.3.ebuild:
  Version bump

  18 Oct 2009; Markus Meier <maekke@gentoo.org>
  kdeaccessibility-colorschemes-4.3.1.ebuild:
  x86 stable, bug #287697

  10 Oct 2009; Samuli Suominen <ssuominen@gentoo.org>
  kdeaccessibility-colorschemes-4.3.1.ebuild:
  amd64 stable wrt #287697

  08 Oct 2009; Alexey Shvetsov <alexxy@gentoo.org>
  -kdeaccessibility-colorschemes-4.3.0.ebuild:
  Drop KDE 4.3.0

*kdeaccessibility-colorschemes-4.3.2 (06 Oct 2009)
