@@ -1,6 +1,6 @@
-# Copyright 1999-2009 Gentoo Foundation
+# Copyright 1999-2010 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/kde-base/kdeaccessibility-colorschemes/Attic/kdeaccessibility-colorschemes-4.3.4.ebuild,v 1.1 2009/12/01 10:10:27 wired Exp $
+# $Header: /var/cvsroot/gentoo-x86/kde-base/kdeaccessibility-colorschemes/Attic/kdeaccessibility-colorschemes-4.3.4.ebuild,v 1.2 2010/01/21 02:13:55 abcd Exp $
 
 EAPI="2"
 
@@ -10,5 +10,5 @@ KMMODULE="ColorSchemes"
 inherit kde4-meta
 
 DESCRIPTION="KDE high contrast color schemes"
-KEYWORDS="~alpha ~amd64 ~hppa ~ia64 ~ppc ~ppc64 ~sparc ~x86"
+KEYWORDS="~alpha ~amd64 ~hppa ~ia64 ~ppc ~ppc64 ~sparc ~x86 ~amd64-linux ~x86-linux"
 IUSE=""
